Add update for card
